fix-java-imput-tojson-call-on-client (#164)